<resources>
    <string name="app_name">SMOOTHEAT</string>

    <string name="splashScreen_contentDescription">Logo de la app</string>
    <string name="splashScreen_texto">SMOOTHEAT</string>

    <string name="registrarse_nombre">Nombre</string>
    <string name="registrarse_email">Email</string>
    <string name="registrarse_contrasena">Contraseña</string>
    <string name="registrarse_repetir_contrasena">Repetir contraseña</string>
    <string name="registrarse_boton">Registrarse</string>
    <string name="registrarse_titulo">REGISTRATE</string>
    <string name="registrarse_titulo_nombre">Nombre</string>
    <string name="registrarse_titulo_email">Email</string>
    <string name="registrarse_titulo_contrasena">Contraseña</string>
    <string name="registrarse_titulo_repetir_contrasena">Repetir contraseña</string>

    <string name="login_email">Email</string>
    <string name="login_contrasena">Contraseña</string>
    <string name="login_boton">Iniciar sesion</string>
    <string name="login_registrarse">No tienes una cuenta? Registrate.</string>
    <string name="login_titulo">INICIAR SESIÓN</string>
    <string name="login_titulo_email">Email</string>
    <string name="login_titulo_contrasena">Contraseña</string>

    <string name="menuPrincipal_recetas">RECETAS</string>
    <string name="menuPrincipal_nevera">NEVERA</string>
    <string name="menuPrincipal_aprende_a_cocinar">APRENDE A COCINAR</string>
    <string name="menuPrincipal_lista_de_la_compra">LISTA DE LA COMPRA</string>

    <string name="actionbar_recetas">Recetas</string>
    <string name="actionbar_nevera">Nevera</string>
    <string name="actionbar_aprendeCocinar">Aprende a cocinar</string>
    <string name="actionbar_listaCompra">Lista de la compra</string>

    <string name="receta2_imagenReceta">imagenReceta</string>
    <string name="receta2_descripcion">descripcion</string>

    <string name="pantallaNevera_anadir">Añadir</string>

    <string name="addFilaNevera_anadirAlimento">Añadir alimento</string>
    <string name="addFilaNevera_alimento">Alimento</string>
    <string name="addFilaNevera_anadir">Añadir</string>

    <string name="addFilaListaCompra_anadirAlimento">Añadir alimento</string>
    <string name="addFilaListaCompra_alimento">Alimento</string>
    <string name="addFilaListaCompra_anadir">Añadir</string>

    <string name="lista_compra_boton_anadir">Añadir</string>

    <string name="fila_receta_nombre_receta">Nombre receta</string>
    <string name="fila_receta_autor">Autor</string>
    <string name="fila_receta_descripcion">Descripcion</string>
    <string name="fila_nevera_alimento">Alimento</string>
    <string name="fila_nevera_eliminar">Eliminar</string>
    <string name="fila_nevera_tipoalimento">TipoAlimento</string>

    <string name="title_activity_prueba">prueba</string>
    <string name="title_activity_pantalla_nevera_2">Pantalla_nevera_2</string>
    <string name="addListaCompra_nombrealimento">nombreAlimento</string>
    <string name="addListaCompra_eliminar">Eliminar</string>
    <string name="title_activity_pantalla_lista_compra_2">Pantalla_lista_compra_2</string>

    <string name="pantallaReceta2_tituloPasos">Pasos:</string>
    <string name="pantallaReceta2_pasos_receta">Pasos receta</string>
    <string name="pantallaReceta2_ingredientes_receta">Ingredientes receta</string>
    <string name="pantallaReceta2_tituloIngredientes">Ingredientes:</string>
    <string name="pantallaReceta2_receta">Receta</string>

    <string name="error_noVacio">No puede estar vacio.</string>
    <string name="error_formatoIncorrecto">Formato incorrecto.</string>
    <string name="error_min1letra">Tiene que tener minimo una letra.</string>
    <string name="error_min1num">Tiene que tener minimo un numero.</string>
    <string name="error_min8caracteres">Tiene que tener minimo 8 caracteres.</string>
    <string name="error_contrasDif">Las dos contraseñas tienen que ser iguales.</string>

    <string name="toast_usuarioNoCreado">Fallo al crear el usuario.</string>
    <string name="toast_addAlimento">Se ha añadido el alimento</string>

    <string name="filaAprendeCocina_titulo_del_video">Titulo del video</string>
    <string name="login_emailContraseñaIncorrectos">Email o contraseña incorrectas</string>
    <string name="register_errorCrearUsuario">Error al crear el usuario.</string>
    <string name="boton_reproducir">Reproducir</string>
    <string name="cerrarSesion_actionbr">Cerrar sesion</string>
    <string name="PantallaRegistro_ya_tienes_cuenta">Ya tienes cuenta? Pulsa aqui.</string>

    <string name="nombre_menuPrincipal">MENÚ PRINCIPAL</string>
    <string name="nombre_pantallaDetallesReceta">DETALLES RECETA</string>
    <string name="nombre_nevera">NEVERA</string>
    <string name="nombre_listaCompra">LISTA DE LA COMPRA</string>
    <string name="nombre_aprendeCocinar">APRENDE A COCINAR</string>
    <string name="nombre_recetas">RECETAS</string>


    <string name="nevera_tipo_Frutas">Frutas</string>
    <string name="nevera_tipo_Verduras_hortalizas">Verduras y hortalizas</string>
    <string name="nevera_tipo_Leche_derivados">Leche y derivados</string>
    <string name="nevera_tipo_carne">Carne y embutidos</string>
    <string name="nevera_tipo_pescado">Pescados y mariscos</string>
    <string name="nevera_tipo_pasta">Pasta</string>
    <string name="nevera_tipo_frutosSecos">Frutos secos</string>
    <string name="nevera_tipo_bebidas">Bebidas</string>
    <string name="nevera_tipo_salsas">Salsas</string>
    <string name="nevera_tipo_otros">Otros</string>

    <string name="intent_puExtra_receta">receta</string>

    <string name="bbdd_campo_nombre">nombre</string>
    <string name="bbdd_campo_tipoAlimento">tipoAlimento</string>
    <string name="bbdd_campo_uso">uso</string>
    <string name="bbdd_campo_uso_listaCompra">listaCompra</string>
    <string name="bbdd_pk_alimneto_listacompra">_listaCompra</string>
    <string name="bbdd_coleccion_alimento">alimento</string>
    <string name="bbdd_campo_uso_nevera">nevera</string>
    <string name="bbdd_pk_alimneto_nevera">_nevera</string>
    <string name="bbdd_coleccion_receta">receta</string>
    <string name="bbdd_campo_nombreReceta">nombreReceta</string>
    <string name="bbdd_campo_descripcionCorta">descripcionCorta</string>
    <string name="bbdd_campo_ingredientes">ingredientes</string>
    <string name="bbdd_campo_pasos">pasos</string>
    <string name="bbdd_campo_foto">foto</string>
    <string name="bbdd_coleccion_aprendeCocinar">aprendeCocinar</string>
    <string name="bbdd_campo_tituloVideo">tituloVideo</string>
    <string name="bbdd_campo_video">video</string>


</resources>
