<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Pantalla_Registrarse">

    <TextView
            android:text="@string/registrarse_titulo"
            android:layout_width="234dp"
            android:layout_height="46dp"
            android:id="@+id/textView4" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textStyle="bold" android:textAllCaps="false"
            android:textSize="30sp" android:textAlignment="center"/>

    <TextView
            android:text="@string/registrarse_titulo_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:textStyle="bold" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.243"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/registrarse_nombre"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.503"
            android:hint="@string/registrarse_nombre" android:inputType="textPersonName"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView5"/>

    <TextView
            android:text="@string/registrarse_titulo_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.231"
            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/registrarse_nombre"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/registrarse_email"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.503"
            android:hint="@string/registrarse_email" android:inputType="textEmailAddress"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView6"/>

    <TextView
            android:text="@string/registrarse_titulo_contrasena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.261"
            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/registrarse_email"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/registrarse_contrasena" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/registrarse_contrasena"
            app:layout_constraintHorizontal_bias="0.503" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView7"/>

    <TextView
            android:text="@string/registrarse_titulo_repetir_contrasena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.313"
            android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/registrarse_contrasena"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/registrarse_repetir_contrasena"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:hint="@string/registrarse_repetir_contrasena"
            android:inputType="textPassword"
            app:layout_constraintHorizontal_bias="0.503" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView8"/>

    <Button
            android:text="@string/registrarse_boton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registrarse_boton" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="40dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.502" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/registrarse_repetir_contrasena"
            app:layout_constraintVertical_bias="1.0"/>

</android.support.constraint.ConstraintLayout>