<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".nevera.FilaNeveraActivity">

    <TextView
            android:text="@string/fila_nevera_alimento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/alimento" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent" android:textColor="@android:color/black"/>
    <TextView
            android:text="@string/fila_nevera_eliminar"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/eliminar"
            android:background="@drawable/boton_redondo_eliminar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@android:color/white" android:textStyle="bold" android:layout_marginTop="10dp"
            android:textAlignment="center"/>
    <TextView
            android:text="@string/fila_nevera_tipoalimento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tipoAlimento" android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@+id/alimento" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textSize="12sp" android:textColor="@android:color/black"/>
</android.support.constraint.ConstraintLayout>