<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PantallaLogin"
        android:background="@color/colorPrimary">


    <TextView
            android:text="@string/login_titulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:layout_marginTop="44dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:textAllCaps="false"
            android:textSize="30sp" android:textAlignment="center" android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:ems="10"
            android:id="@+id/login_email"
            android:inputType="textEmailAddress" android:hint="@string/login_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.496"
            android:background="@drawable/edit_text_redondo"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginTop="60dp"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:ems="10"
            android:id="@+id/login_contrasena"
            android:hint="@string/login_contrasena"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            android:inputType="textPassword"
            android:background="@drawable/edit_text_redondo"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            app:layout_constraintTop_toBottomOf="@+id/login_email" android:layout_marginTop="24dp"/>
    <Button
            android:text="@string/login_boton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/login_boton"
            android:layout_marginTop="24dp"
            android:background="@drawable/boton_redondo_login_register"
            app:layout_constraintTop_toBottomOf="@+id/login_contrasena" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="0.502"
            android:textColor="@android:color/white"/>

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/login_registrarse" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            android:textColor="@color/colorAccentDark"
            android:text="@string/login_registrarse" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/login_boton" app:layout_constraintVertical_bias="0.069"
            android:textAlignment="center" android:textStyle="bold"/>



</android.support.constraint.ConstraintLayout>