<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".recetas.PantallaRecetas2"
        android:background="@color/colorPrimaryLight">

    <include android:id="@+id/my_toolbar_receta2" layout="@layout/toolbar"/>


    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:id="@+id/scrollView_receta2">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/pantallaReceta2_receta"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/nombreReceta_receta2" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="70dp"
                    android:textColor="@android:color/black" android:textStyle="bold" android:textAlignment="center"
                    android:textSize="20sp"/>

            <ImageView
                    android:src="@mipmap/ic_launcher"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:id="@+id/foto_receta2"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/receta2_imagenReceta"
                    app:layout_constraintTop_toBottomOf="@+id/nombreReceta_receta2" android:layout_marginTop="16dp"/>

            <TextView
                    android:text="@string/pantallaReceta2_tituloIngredientes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tituloIngredientes" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/foto_receta2" android:textColor="@android:color/black"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="start|top"
                    android:ems="10"
                    android:id="@+id/ingredientes"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                    android:singleLine="false" android:textColor="@android:color/black"
                    android:text="@string/pantallaReceta2_ingredientes_receta"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tituloIngredientes"/>
            <!-- @string/receta2_descripcion -->

            <TextView
                    android:text="@string/pantallaReceta2_tituloPasos"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tituloPasos" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/ingredientes" android:textColor="@android:color/black"/>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="start|top"
                    android:ems="10"
                    android:id="@+id/pasos"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                    android:singleLine="false" android:textColor="@android:color/black"
                    android:text="@string/pantallaReceta2_pasos_receta"
                    app:layout_constraintTop_toBottomOf="@+id/tituloPasos" android:layout_marginTop="8dp"/>
            <VideoView
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:id="@+id/video_receta2" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/pasos" android:layout_marginTop="16dp"/>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>